layout base font

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Cool Free Fonts</title>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1" />
-  <link rel="preload" href="assets/font/Inter-Medium.ttf" as="font" type="font/woff" crossorigin>
+  <link rel="preload" href="assets/font/Inter-Bold.ttf" as="font" type="font/woff" crossorigin>
   <link rel="icon" type="image/png" href="assets/favicon/favicon.png">
   <link rel="stylesheet" href="css/style.css" />
 </head>
@@ -15,7 +15,7 @@
   <nav>
     <div class="header grid">
       <div class="index-btn">
-        <a href="index.html">Cool Free fonts</a>
+        <a href="index.html">CoolFreeFonts</a>
       </div>
       <div class="cool-btn">
         <a><span>😎</span></a>
@@ -27,10 +27,7 @@
   </nav>
 
   <!-- main js -->
-  <script src="https://cdn.jsdelivr.net/npm/p5@1.4.0/lib/p5.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="js/main.js"></script>
-  <script src="js/index.js"></script>
 </body>
 
 </html>
