--- a/inter.html
+++ b/inter.html
@@ -2,36 +2,40 @@
 <html lang="en">
 
 <head>
-  <title>Off Track</title>
+  <title>Cool Free Fonts</title>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1" />
-  <link rel="preload" href="assets/font/Redaction_50-Regular.woff" as="font" type="font/woff" crossorigin>
+  <link rel="preload" href="assets/font/Inter-Bold.ttf" as="font" type="font/woff" crossorigin>
+  <link rel="icon" type="image/png" href="assets/favicon/favicon.png">
   <link rel="stylesheet" href="css/style.css" />
 </head>
 
 <body>
-  <div id="container">
-    <div class="window" id="canvasLines" style="z-index:10"></div>
-    <div id="titles">
-      <div class="cover-title">
-        <div id="cover-title-1">OFF TRACK</div>
-        <div id="cover-title-2">A Journey inside the Bitchute Infodemic&nbsp;Underground</div>
+<!-- header -->
+  <nav>
+    <div class="header grid">
+      <div class="index-btn">
+        <a href="index.html">CoolFreeFonts</a>
       </div>
-      <div id="cover-btn">
-        <a href="home.html" class="redaction">ENTER</a>
+      <div class="font-btn">
+        <a><span>Inter</span></a>
+      </div>
+      <div class="about-btn">
+        <a href="about.html">About</a>
       </div>
     </div>
+  </nav>
 
-    <div id="cover">
+<!-- content -->
+  <div class="content">
+    <div class="font-content">
+
     </div>
   </div>
 
+
   <!-- main js -->
-  <script src="https://cdn.jsdelivr.net/npm/p5@1.4.0/lib/p5.js"></script>
-  <script src="https://unpkg.com/p5.js-svg@1.1.1"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="js/main.js"></script>
-  <script src="js/index.js"></script>
 </body>
 
 </html>
