--- a/index.html
+++ b/index.html
@@ -18,13 +18,15 @@
         <a href="index.html">CoolFreeFonts</a>
       </div>
       <div class="cool-btn">
-        <a><span>😎</span></a>
+        <a href="./inter.html"><span>😎</span></a>
       </div>
       <div class="about-btn">
         <a href="about.html">About</a>
       </div>
     </div>
   </nav>
+
+  <a href="./inter.html"><span>Inter</span></a>
 
   <!-- main js -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
