--- a/inter.html
+++ b/inter.html
@@ -50,9 +50,9 @@
 
   <!-- Color buttons -->
   <div class="buttons">
-    <div class="button-bw">Black and white</div>
-    <div class="button-random-color">Random color</div>
-    <div class="button-swap">Swap colors</div>
+    <div class="button-bw"></div>
+    <div class="button-random-color"></div>
+    <div class="button-swap">⇄</div>
   </div>
 
   <!-- main js -->
@@ -65,7 +65,7 @@
 
     // Optional parameters
     direction: 'horizontal',
-    loop: false,
+    loop: true,
 
     // Navigation arrows
     navigation: {
