--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-<!-- header -->
+  <!-- header -->
   <nav>
     <div class="header grid">
       <div class="index-btn">
@@ -26,8 +26,83 @@
     </div>
   </nav>
 
+  <!-- Selectors -->
+  <div class="selectors">
+    <div class="selectors-category">
+      <span style="margin-right: 10px;">Category:</span>
+      <button id="all-btn">All</button>
+      <button id="serif-btn">Serif</button>
+      <button id="sans-btn">Sans</button>
+      <button id="mono-btn">Mono</button>
+      <button id="mono-btn">Display</button>
+    </div>
+    <div class="selectors-licence">
+      <span style="margin-right: 10px;">Licence:</span>
+      <button id="all-btn">Commercial</button>
+      <button id="serif-btn">Non commercial</button>
+    </div>
+
+
+  </div>
+
+  <!-- Font grid -->
+  <div class="font-grid">
+    <a href="./inter.html" class="serif-tag block">
+        <div class="font-name">
+          Inter
+        </div>
+        <div class="font-text">
+          Homer no function beer well without
+        </div>
+          <div class="font-category">
+            Sans serif
+          </div>
+          <div class="font-licence">
+            Commercial
+          </div>
+    </a>
+    <a href="./inter.html" class="mono-tag block">
+        <div class="font-name">
+          Space mono
+        </div>
+        <div class="font-text">
+          Homer no function beer well without
+        </div>
+          <div class="font-category">
+            Mono
+          </div>
+          <div class="font-licence">
+            Commercial
+          </div>
+    </a>
+    <a href="./inter.html" class="mono-tag block">
+        <div class="font-name">
+          Inter
+        </div>
+        <div class="font-text">
+          Homer no function beer well without
+        </div>
+          <div class="font-category">
+            Sans serif
+          </div>
+          <div class="font-licence">
+            Commercial
+          </div>
+    </a>
+    <div class="serif-tag block">4 Serif</div>
+    <div class="sans-tag block">5 Sans</div>
+    <div class="mono-tag block">6 Mono</div>
+    <div class="serif-tag block">7 Serif</div>
+    <div class="sans-tag block">8 Sans</div>
+    <div class="mono-tag block">9 Mono</div>
+    <div class="sans-tag block">10 Sans</div>
+    <div class="mono-tag block">11 Mono</div>
+    <div class="sans-tag block">12 Sans</div>
+  </div>
+
   <!-- main js -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="assets/js/main.js"></script>
 </body>
 
 </html>
