--- a/inter.html
+++ b/inter.html
@@ -10,9 +10,6 @@
   <link rel="stylesheet" href="css/style.css" />
   <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css"/>
   <style>
-    .download-btn:hover:after{
-      content: "fonts.google.com↗";
-    }
   </style>
 </head>
 
@@ -57,14 +54,14 @@
     <div class="utility-btn">
       <!-- Color buttons -->
       <div class="buttons">
-        <div class="bw-btn"></div>
-        <div class="rand-btn">⚄</div>
-        <div class="swap-btn">⇄</div>
+        <button class="bw-btn"></button>
+        <button class="rand-btn">⚄</button>
+        <button class="swap-btn">⇄</button>
       </div>
 
       <!-- Download button -->
       <a href="https://fonts.google.com/specimen/Inter">
-        <div class="download-btn"></div>    
+        <button class="download-btn">↓</button>    
       </a>
     </div>
     
