font size index

--- a/inter.html
+++ b/inter.html
@@ -54,18 +54,18 @@
     <div class="utility-btn">
       <!-- Color buttons -->
       <div class="buttons">
+        <button class="swap-btn">↔</button>
         <button class="bw-btn"></button>
         <button class="rand-btn">⚄</button>
-        <button class="swap-btn">⇄</button>
       </div>
 
       <!-- Download button -->
       <a href="https://fonts.google.com/specimen/Inter">
-        <button class="download-btn">↓</button>    
+        <button class="download-btn">↓</button>
       </a>
     </div>
-    
-    
+
+
   </div>
 
 
