--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   </nav>
 
   <!-- Selectors -->
-  <div class="selectors grid">
+  <div class="selectors">
     <div class="selectors-category">
       <span style="margin-right: 20px;">Category:</span>
       <button id="all-btn">All</button>
@@ -64,7 +64,7 @@
 
   <!-- Font grid -->
   <div class="font-grid">
-    <a href="./inter.html" class="serif-tag block">
+    <a href="./inter.html" class="sans-tag block">
         <div class="font-name">
           Inter
         </div>
@@ -78,15 +78,15 @@
             Commercial
           </div>
     </a>
-    <a href="./inter.html" class="mono-tag block">
+    <a href="./sporting.html" class="sans-tag block">
         <div class="font-name">
-          Space mono
+          Sporting Grotesque
         </div>
-        <div class="font-text">
+        <div class="font-text sporting">
           Homer no function beer well without
         </div>
           <div class="font-category">
-            Mono
+            Sans
           </div>
           <div class="font-licence">
             Commercial
@@ -106,7 +106,7 @@
             Commercial
           </div>
     </a>
-    <div class="serif-tag block">4 Serif</div>
+    <div class="serif-tag commercial block">4 Serif</div>
     <div class="sans-tag block">5 Sans</div>
     <div class="mono-tag block">6 Mono</div>
     <div class="serif-tag block">7 Serif</div>
