--- a/sporting.html
+++ b/sporting.html
@@ -21,7 +21,7 @@
         <a href="index.html">CoolFreeFonts</a>
       </div>
       <div class="font-btn about-hidden">
-        <a><span>Inter</span></a>
+        <a><span>Sporting Grotesque</span></a>
       </div>
       <div class="about-btn">
         <a style="cursor: pointer;">About</a>
@@ -53,12 +53,12 @@
 
           <!-- Slides -->
           <div class="swiper-slide">
-            <div class="scheda titolo">
+            <div class="scheda titolo sporting">
                 Oh, everything looks bad if you remember it.
             </div>
           </div>
 
-          <div class="swiper-slide">
+          <div class="swiper-slide sporting">
             <div class="scheda tre-colonne">
               <p>I hope I didn't brain my damage. "Thank the Lord"? That sounded like a prayer. A prayer in a public school. God has no place within these walls, just like facts don't have a place within an organized religion. Save me, Jeebus. Attempted murder? Now honestly, what is that? Do they give a Nobel Prize for attempted chemistry? Fame was like a drug. But what was even more like a drug were the drugs. Inflammable means flammable? What a country. He didn't give you gay, did he? Did he?! Donuts. Is there anything they can't do? We started out like Romeo and Juliet, but it ended up in tragedy. Me fail English? That's unpossible. Human contact: the final frontier. Don't kid yourself, Jimmy. If a cow ever got the chance, he'd eat you and everyone you care about! I've had it with this school, Skinner. Low test scores, class after class of ugly, ugly children… You don't like your job, you don't strike. You go in every day and do it really half-assed. That's the American way. Hi. I'm Troy McClure. You may remember me from such self-help tapes as "Smoke Yourself Thin" and "Get Some Confidence, Stupid!" Get ready, skanks! It's time for the truth train! I'm normally not a praying man, but if you're up there, please save me, Superman. Your questions have become more redundant and annoying than the last three "Highlander" movies. Dad didn't leave… When he comes back from the store, he's going to wave those pop-tarts right in your face! Jesus must be spinning in his grave! Uh, no, they're saying "Boo-urns, Boo-urns." I've done everything the Bible says — even the stuff that contradicts the other stuff! We started out like Romeo and Juliet, but it ended up in tragedy. Kids, we need to talk for a moment about Krusty Brand Chew Goo Gum Like Substance. We all knew it contained spider eggs, but the hantavirus? That came out of left field. So if you're experiencing numbness and/or comas, send five dollars to antidote, PO box… Duffman can't breathe! OH NO! Human contact: the final frontier. Jesus must be spinning in his grave! I'm a Spalding Gray in a Rick Dees world. No children have ever meddled with the Republican Party and lived to tell about it. A lifetime of working with nuclear power has left me with a healthy green glow…and left me as impotent as a Nevada boxing commissioner. A woman is a lot like a refrigerator. Six feet tall, 300 pounds…it makes ice. Your questions have become more redundant and annoying than the last three "Highlander" movies. I don't like being outdoors, Smithers. For one thing, there's too many fat children. I don't like being outdoors, Smithers. For one thing, there's too many fat children.</p>
               <p>I hope I didn't brain my damage. "Thank the Lord"? That sounded like a prayer. A prayer in a public school. God has no place within these walls, just like facts don't have a place within an organized religion. Save me, Jeebus. Attempted murder? Now honestly, what is that? Do they give a Nobel Prize for attempted chemistry? Fame was like a drug. But what was even more like a drug were the drugs. Inflammable means flammable? What a country. He didn't give you gay, did he? Did he?! Donuts. Is there anything they can't do? We started out like Romeo and Juliet, but it ended up in tragedy. Me fail English? That's unpossible. Human contact: the final frontier. Don't kid yourself, Jimmy. If a cow ever got the chance, he'd eat you and everyone you care about! I've had it with this school, Skinner. Low test scores, class after class of ugly, ugly children… You don't like your job, you don't strike. You go in every day and do it really half-assed. That's the American way. Hi. I'm Troy McClure. You may remember me from such self-help tapes as "Smoke Yourself Thin" and "Get Some Confidence, Stupid!" Get ready, skanks! It's time for the truth train! I'm normally not a praying man, but if you're up there, please save me, Superman. Your questions have become more redundant and annoying than the last three "Highlander" movies. Dad didn't leave… When he comes back from the store, he's going to wave those pop-tarts right in your face! Jesus must be spinning in his grave! Uh, no, they're saying "Boo-urns, Boo-urns." I've done everything the Bible says — even the stuff that contradicts the other stuff! We started out like Romeo and Juliet, but it ended up in tragedy. Kids, we need to talk for a moment about Krusty Brand Chew Goo Gum Like Substance. We all knew it contained spider eggs, but the hantavirus? That came out of left field. So if you're experiencing numbness and/or comas, send five dollars to antidote, PO box… Duffman can't breathe! OH NO! Human contact: the final frontier. Jesus must be spinning in his grave! I'm a Spalding Gray in a Rick Dees world. No children have ever meddled with the Republican Party and lived to tell about it. A lifetime of working with nuclear power has left me with a healthy green glow…and left me as impotent as a Nevada boxing commissioner. A woman is a lot like a refrigerator. Six feet tall, 300 pounds…it makes ice. Your questions have become more redundant and annoying than the last three "Highlander" movies. I don't like being outdoors, Smithers. For one thing, there's too many fat children. I don't like being outdoors, Smithers. For one thing, there's too many fat children.</p>
@@ -66,7 +66,7 @@
             </div>
           </div>
 
-          <div class="swiper-slide">
+          <div class="swiper-slide sporting">
             <div class="scheda glifi">
               ABCDEFGHIJKLMNOPQRSTUVWXYZ<br>
               abcdefghijklmnopqrstuvwxyz<br>
