Modificati pulsanti pagina font
Pulsante B/N
Diviso a metà. On hover ruota di 180°.

Pulsante switch
Togliere

Pulsante download
 On hover da freccia che punta in basso a freccia che punta in alto a dx

--- a/inter.html
+++ b/inter.html
@@ -93,15 +93,16 @@ I prefer a vehicle that doesn't hurt Mother Earth. It's a go-cart, powered by my
     <div class="utility-btn">
       <!-- Color buttons -->
       <div class="buttons">
-        <button class="swap-btn">↔</button>
-        <button class="bw-btn">⬤</button>
+        <button class="bw-btn"></button>
         <button class="rand-btn">⚄</button>
       </div>
-
       <!-- Download button -->
-      <a href="https://fonts.google.com/specimen/Inter" target=”_blank”>
-        <button class="download-btn">↗Download</button>
-      </a>
+      <div>
+        <a href="https://fonts.google.com/specimen/Inter" target=”_blank”>
+          <button class="download-btn">Download <span class="download-arrow">↓</span></button>
+        </a>
+      </div>
+      
     </div>
 
 
