--- a/sporting.html
+++ b/sporting.html
@@ -82,13 +82,13 @@
       <!-- Color buttons -->
       <div class="buttons">
         <button class="swap-btn">↔</button>
-        <button class="bw-btn">⬤</button>
+        <button class="bw-btn"></button>
         <button class="rand-btn">⚄</button>
       </div>
 
       <!-- Download button -->
       <a href="https://fonts.google.com/specimen/Inter" target=”_blank”>
-        <button class="download-btn">↗Download</button>
+        <button class="download-btn">Download <span class="download-arrow">↓</span></button>
       </a>
     </div>
 
