font size correzioni

--- a/index.html
+++ b/index.html
@@ -47,16 +47,16 @@
   <div class="selectors">
     <div class="selectors-category">
       <span style="margin-right: 20px;">Category:</span>
-      <button id="all-btn">All</button>
-      <button id="serif-btn">Serif</button>
-      <button id="sans-btn">Sans</button>
-      <button id="mono-btn">Mono</button>
-      <button id="mono-btn">Display</button>
+      <button id="all-btn" class="selectors-btn">All</button>
+      <button id="serif-btn" class="selectors-btn">Serif</button>
+      <button id="sans-btn" class="selectors-btn">Sans</button>
+      <button id="mono-btn" class="selectors-btn">Mono</button>
+      <button id="mono-btn" class="selectors-btn">Display</button>
     </div>
     <div class="selectors-licence">
       <span style="margin-right: 20px;">Licence:</span>
-      <button id="all-btn">Commercial</button>
-      <button id="serif-btn">Non commercial</button>
+      <button id="all-btn" class="selectors-btn">Commercial</button>
+      <button id="serif-btn" class="selectors-btn">Non commercial</button>
     </div>
 
 
