--- a/inter.html
+++ b/inter.html
@@ -65,35 +65,34 @@
     <div class="single-column">Uh, no, they're saying "Boo-urns, Boo-urns." And here I am using my own lungs like a sucker. I don't like being outdoors, Smithers. For one thing, there's too many fat children. Son, a woman is like a beer. They smell good, they look good, you'd step over your own mother just to get one! But you can't stop at one. You wanna drink another woman!
 Stan Lee never left. I'm afraid his mind is no longer in mint condition. Our differences are only skin deep, but our sames go down to the bone. Please do not offer my god a peanut. A woman is a lot like a refrigerator. Six feet tall, 300 pounds…it makes ice.
 Hi. I'm Troy McClure. You may remember me from such self-help tapes as "Smoke Yourself Thin" and "Get Some Confidence, Stupid! " Don't kid yourself, Jimmy. If a cow ever got the chance, he'd eat you and everyone you care about!
-Books are useless! I only ever read one book, "To Kill A Mockingbird," and it gave me absolutely no insight on how to kill mockingbirds! Sure it taught me not to judge a man by the color of his skin…but what good does *that* do me? We started out like Romeo and Juliet, but it ended up in tragedy.
-I like my beer cold, my TV loud and my homosexuals flaming. I'm going to the back seat of my car, with the woman I love, and I won't be back for ten minutes! You know, the one with all the well meaning rules that don't work out in real life, uh, Christianity.</div>
+Books are useless! I only ever read one book, "To Kill A Mockingbird," and it gave me absolutely no insight on how to kill mockingbirds!</div>
   </div>
   <div class="right-column">
     Uh, no, they're saying "Boo-urns, Boo-urns." Your questions have become more redundant and annoying than the last three "Highlander" movies. Yes! I am a citizen! Now which way to the welfare office? I'm kidding, I'm kidding. I work, I work.
 You don't like your job, you don't strike. You go in every day and do it really half-assed. That's the American way. Don't kid yourself, Jimmy. If a cow ever got the chance, he'd eat you and everyone you care about!
 Save me, Jeebus. Facts are meaningless. You could use facts to prove anything that's even remotely true! I'm normally not a praying man, but if you're up there, please save me, Superman. Attempted murder? Now honestly, what is that? Do they give a Nobel Prize for attempted chemistry?
 Marge, just about everything's a sin. Y'ever sat down and read this thing? Technically we're not supposed to go to the bathroom. D'oh. I'm normally not a praying man, but if you're up there, please save me, Superman.
-I prefer a vehicle that doesn't hurt Mother Earth. It's a go-cart, powered by my own sense of self-satisfaction. Fame was like a drug. But what was even more like a drug were the drugs. Brace yourselves gentlemen. According to the gas chromatograph, the secret ingredient is… Love!? Who's been screwing with this thing?
+I prefer a vehicle that doesn't hurt Mother Earth. It's a go-cart, powered by my own sense of self-satisfaction. Fame was like a drug. But what was even more like a drug were the drugs. Brace yourselves gentlemen. According to the gas chromatograph, the secret ingredient is… Love!?
   </div>
 </div>
           </div>
 
           <div class="swiper-slide">
             <div class="scheda glifi">
-              Aa Bb Cc Dd Ee Ff Gg Hh Ii Jj Kk Ll Mm Nn Oo Pp Qq Rr Ss Tt Uu Vv Ww Xx Yy Zz<br>
+              AaBbCcDdEeFfGgHhIiJjKkLlMmNnOoPpQqRrSsTtUuVvWwXxYyZz<br>
               1234567890
               ‘?’“!”(%)[#]{@}/&\<-+÷×=>®©$€£¥¢:;,.*
             </div>
           </div>
     </div>
     <!-- Nav arrows -->
-    <div class="swiper-button-prev right">←</div>
-    <div class="swiper-button-next right">→</div>
+    <div class="swiper-button-prev right"></div>
+    <div class="swiper-button-next right"></div>
 
     <div class="utility-btn">
       <!-- Color buttons -->
       <div class="buttons">
-        <button class="bw-btn"></button>
+        <button class="bw-btn">◐</button>
         <button class="rand-btn">⚄</button>
       </div>
       <!-- Download button -->
@@ -102,7 +101,7 @@ I prefer a vehicle that doesn't hurt Mother Earth. It's a go-cart, powered by my
           <button class="download-btn">Download <span class="download-arrow">↓</span></button>
         </a>
       </div>
-      
+
     </div>
 
 
