--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
           Sporting Grotesque
         </div>
         <div class="font-text sporting">
-          Homer no function beer well without
+          Oh, everything looks bad if you remember it
         </div>
           <div class="font-category">
             Sans
@@ -92,25 +92,90 @@
             Commercial
           </div>
     </a>
-    <a href="./inter.html" class="mono-tag block">
+    <a href="./redaction.html" class="serif-tag block">
         <div class="font-name">
-          Inter
+          Redaction
         </div>
         <div class="font-text">
-          Homer no function beer well without
+          Aaah! Natural light! Get it off me! Get it off me!
         </div>
           <div class="font-category">
-            Sans serif
+            Serif
           </div>
           <div class="font-licence">
             Commercial
           </div>
     </a>
-    <div class="serif-tag commercial block">4 Serif</div>
-    <div class="sans-tag block">5 Sans</div>
-    <div class="mono-tag block">6 Mono</div>
-    <div class="serif-tag block">7 Serif</div>
-    <div class="sans-tag block">8 Sans</div>
+    <a href="./spacegrotesk.html" class="sans-tag block">
+      <div class="font-name">
+        Space Grotesk
+      </div>
+      <div class="font-text">
+        Please do not offer my god a peanut
+      </div>
+        <div class="font-category">
+          Sans serif
+        </div>
+        <div class="font-licence">
+          Commercial
+        </div>
+  </a>
+  <a href="./ortica.html" class="serif-tag block">
+    <div class="font-name">
+      Ortica
+    </div>
+    <div class="font-text">
+      Duffman can't breathe! OH NO!
+    </div>
+      <div class="font-category">
+       Serif
+      </div>
+      <div class="font-licence">
+        Commercial
+      </div>
+  </a>
+  <a href="./hidde.html" class="sans-tag block">
+    <div class="font-name">
+      Hidde Grotesk
+    </div>
+    <div class="font-text">
+      Fat Tony is a cancer on this fair city
+    </div>
+      <div class="font-category">
+       Sans serif
+      </div>
+      <div class="font-licence">
+        Commercial
+      </div>
+  </a>
+  <a href="./lastik.html" class="serif-tag block">
+    <div class="font-name">
+      Lastik
+    </div>
+    <div class="font-text">
+      Lisa, vampires are make-believe
+    </div>
+      <div class="font-category">
+       Serif
+      </div>
+      <div class="font-licence">
+        Commercial
+      </div>
+  </a>
+  <a href="./azeretmono.html" class="mono-tag block">
+    <div class="font-name">
+      Azeret Mono
+    </div>
+    <div class="font-text">
+      Bart, with $10,000 we'd be millionaires
+    </div>
+      <div class="font-category">
+       Mono
+      </div>
+      <div class="font-licence">
+        Commercial
+      </div>
+  </a>
     <div class="mono-tag block">9 Mono</div>
     <div class="sans-tag block">10 Sans</div>
     <div class="mono-tag block">11 Mono</div>
