minor fix classi a id

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <div class="about-btn">
         <a style="cursor: pointer;">About</a>
       </div>
-      <div class="about-text">
+      <div id="about-text" class="about">
         <p>Remember the time he ate my goldfish? And you lied and said I never had goldfish. Then why did I have the bowl, Bart? *Why did I have the bowl?* I hope this has taught you kids a lesson: kids never learn.
 
           …And the fluffy kitten played with that ball of string all through the night. On a lighter note, a Kwik-E-Mart clerk was brutally murdered last night. You don't like your job, you don't strike. You go in every day and do it really half-assed. That's the American way.
@@ -33,7 +33,7 @@
           Oh, a *sarcasm* detector. Oh, that's a *really* useful invention! When I held that gun in my hand, I felt a surge of power…like God must feel when he's holding a gun. Dear Mr. President, There are too many states nowadays. Please, eliminate three. P.S. I am not a crackpot.</p>
       </div>
       <div></div>
-      <div class="about-contacts">
+      <div id="about-contacts" class="about">
         <p>A project by<br>
         <a href="https://andreadesimone.info/" target=”_blank”>Andrea De Simone</a>
         <br>
@@ -55,8 +55,8 @@
     </div>
     <div class="selectors-licence">
       <span style="margin-right: 20px;">Licence:</span>
-      <button id="all-btn" class="selectors-btn">Commercial</button>
-      <button id="serif-btn" class="selectors-btn">Non commercial</button>
+      <button id="commercial-btn" class="selectors-btn">Commercial</button>
+      <button id="noncommercial-btn" class="selectors-btn">Non commercial</button>
     </div>
 
 
@@ -68,7 +68,7 @@
         <div class="font-name">
           Inter
         </div>
-        <div class="font-text">
+        <div class="font-text" id="inter">
           Homer no function beer well without
         </div>
           <div class="font-category">
@@ -82,7 +82,7 @@
         <div class="font-name">
           Sporting Grotesque
         </div>
-        <div class="font-text sporting">
+        <div class="font-text" id="sporting">
           Oh, everything looks bad if you remember it
         </div>
           <div class="font-category">
